--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,6 +29,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PK'
 - !lcsh 'Sanskrit drama -- Adaptations'
+- GITenberg
 tableOfContents: Sakuntala or the lost ring -- Vikramorvasi or Urvasi won by valour
   -- Malavikagnimitra -- The vira charita or the mahavira charita -- Uttar Rama Charita
   -- Malati and Madhava or the stolen marriage -- Hanuman Nataka, or Mahanataka, or
